[Fix] Text alignment issue on the top page (#239)

--- a/src/app/(root)/page.module.scss
+++ b/src/app/(root)/page.module.scss
@@ -503,29 +503,23 @@ $slide-h: 32.5rem; /* 520px */
     }
   }
 
-  & > :nth-child(2) {
-    @apply absolute inset-0 grid place-content-center;
-
-    height: 100%;
-
-    & > :nth-child(1 of h3) {
-      @apply absolute inset-0 my-auto
+  & > :nth-child(1 of h3) {
+    @apply absolute inset-0 my-auto
         grid place-content-center gap-6
         text-center;
 
-      height: fit-content;
+    height: fit-content;
 
-      & > :nth-child(1) {
-        @apply text-5xl font-bold;
+    & > :nth-child(1) {
+      @apply text-5xl font-bold;
 
-        color: var.$secondary;
-      }
+      color: var.$secondary;
+    }
 
-      & > :nth-child(2) {
-        @apply text-7xl font-bold;
+    & > :nth-child(2) {
+      @apply text-7xl font-bold;
 
-        color: var.$primary;
-      }
+      color: var.$primary;
     }
   }
 }
